--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
       - image: circleci/openjdk:8-jdk
     steps:
       - checkout
-      - setup_remove_docker
+      - setup_remote_docker
       - run:
           name: Setup common environment variables
           command: |
@@ -102,7 +102,7 @@ workflows:
     jobs:
       - build_backend
       - build_frontend
-  test:
-    jobs:
-      - test_backend
-      - test_frontend
+  # test:
+  #   jobs:
+  #     - test_backend
+  #     - test_frontend
