--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
     docker:
       - image: circleci/openjdk:8-jdk
     steps:
-      - checkout
+      - checkout:
           path: ~/BackEnd/SEPT.Team.Seven
       - setup_remote_docker
       - run:
@@ -42,7 +42,7 @@ jobs:
     docker:
       - image: circleci/openjdk:8-jdk-stretch
     steps:
-      - checkout
+      - checkout:
           path: ~/BackEnd/SEPT.Team.Seven
       - restore_cache:
           key: circleci-sept-team-seven-{{ checksum "pom.xml" }}
@@ -56,7 +56,7 @@ jobs:
     docker:
       - image: circleci/node:10.15.0-jessie
     steps:
-      - checkout
+      - checkout:
           path: ~/FrontEnd/appointment-system
       - restore_cache:
           key: dependency-cache-{{ checksum "package.json" }}
@@ -83,7 +83,7 @@ jobs:
     docker:
       - image: circleci/node:10.15.0-jessie
     steps:
-      - checkout
+      - checkout:
           path: ~/FrontEnd/appointment-system
       - restore_cache:
           key: dependency-cache-{{ checksum "package.json" }}
