--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,6 +59,7 @@ jobs:
     docker:
       - image: circleci/node:10.15.0-jessie
     steps:
+      - checkout
       - run:
           command: node -e 'const fs = require("fs");fs.readdirSync("./").forEach(file => {console.log(file);});'
       - restore_cache:
