add checkout path

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,7 +59,8 @@ jobs:
     docker:
       - image: circleci/node:10.15.0-jessie
     steps:
-      - checkout
+      - checkout:
+          path: ~/FrontEnd/appointment-system
       - run:
           command: node -e 'const fs = require("fs");fs.readdirSync("./").forEach(file => {console.log(file);});'
       - restore_cache:
