--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
       - image: circleci/openjdk:8-jdk
     steps:
       - checkout:
-          path: ~/BackEnd
+          path: ~/BackEnd/SEPT.Team.Seven
       - setup_remote_docker
       - run:
           name: Setup common environment variables
