--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
       - checkout:
           path: ~/BackEnd/SEPT.Team.Seven
       - setup_remote_docker
-      - run: mv ./BackEnd/SEPT.Team.Seven ./
+      - run: mv ./BackEnd/SEPT.Team.Seven/* ./
       - run:
           name: Setup common environment variables
           command: |
