--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,6 @@
 version: 2.1
 
 orbs:
-  aws-cli: circleci/aws-cli@1.3.0
   aws-ecr: circleci/aws-ecr@6.12.2
   aws-ecs: circleci/aws-ecs@1.3.0
 
@@ -33,7 +32,14 @@ jobs:
           path: target/surefire-reports
       - store_artifacts:
           path: target/SEPT.Team.Seven-0.0.1-SNAPSHOT.jar
-      - run: 
+      - run:
+          name: Install dependencies for AWS
+          command: |
+            sudo apt-get update
+            sudo apt-get -y -qq install awscli
+            sudo apt-get install python3-pip
+            sudo pip3 install --upgrade awscli
+      - run:
           name: Build docker image
           command: docker build -t $FULL_IMAGE_NAME .
       - run: 
@@ -81,10 +87,17 @@ jobs:
           name: build
           command: npm run build
       - run:
-          name: build
+          name: Install dependencies for AWS
+          command: |
+            sudo apt-get update
+            sudo apt-get -y -qq install awscli
+            sudo apt-get install python3-pip
+            sudo pip3 install --upgrade awscli
+      - run:
+          name: empty s3 bucket
           command: aws s3 rm --recursive s3://sept-team-seven-frontend/
       - run:
-          name: test
+          name: populate s3 bucket
           command: aws s3 cp --recursive ./build s3://sept-team-seven-frontend/
   test_frontend:
     working_directory: ~/FrontEnd/appointment-system
