--- a/BackEnd/SEPT.Team.Seven/src/main/resources/application.properties
+++ b/BackEnd/SEPT.Team.Seven/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #JDBC Properties
-spring.datasource.url=jdbc:mysql://localhost:3306/appointment_system?useSSL=false&serverTimeZone=UTC
-spring.datasource.username=root
-spring.datasource.password=root1
+spring.datasource.url=jdbc:mysql://appointment-system.chacp2qsyzam.us-east-1.rds.amazonaws.com:3306/appointment_system?useSSL=false&serverTimeZone=UTC
+spring.datasource.username=admin
+spring.datasource.password=w3RMrugaxqVlNCdwLNUf
 
 #Configure spring data rest
 spring.data.rest.base-path=/api
